[flight-bookings-xxx] Improved mvc implementation:
Summary of Changes:

- Enhanced AirportController: Updated to use AirportDTO and renamed the airportConverter to mapping for clarity.

- Controller Test Case: Implemented a controller test using MockMvc. Endpoint tests should use Spring MockMvc components as unit tests for controllers are ineffective.

- Airport Converter: Registered airportConverter as a Spring component for dependency injection in AirportController.

- AirportDTO Creation: Introduced AirportDTO as a record to represent immutable objects.

- Renamed Entity: Changed the database entity name from Airport to AirportEntity for clarity.

- Lombok Annotation: Utilized @RequiredArgsConstructor from Lombok to eliminate boilerplate constructor code, allowing for automatic injection of dependencies.

- Integration Test Example: Added an integration test example using H2 in AirportServiceImplIntegrationTest.

- Improved Service Test: Enhanced AirportServiceImplTest by using Extension.class for better test organization.

- Test Properties File: Created application-test.properties to configure environment-specific values, enabling the use of an in-memory H2 database for testing.

<dependency>
    <groupId>com.h2database</groupId>
    <artifactId>h2</artifactId>
    <scope>test</scope>
</dependency>

- Exception Handling: Modeled exceptions using sealed classes, allowing DomainError to encompass exceptions such as BookingNotFoundException, FlightNotFoundException, NoSeatAssignedException, PassengerNotFoundException, ResourceNotFoundException, SeatAlreadyBookedException, SeatNotFoundException, UnauthorizedAccessException, and UserNotFoundException.

- Global Exception Handler: Implemented GlobalExceptionHandler.java to be able to catch all exceptions and provide necessary responses in the REST API.
Circular Reference Resolved: Eliminated circular references between services to improve architecture.

-Database Initialization for Tests: Updated FlightBookingsApplic